# IRODB

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
cli/: main.py
examples/: basic_usage.py
irodb/: __init__.py  constants.py  core.py  exceptions.py  hash_system.py  index.py  transaction.py  utils.py
tests/: test_core.py
