[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "irotechlab_irodb"
version = "1.0.8"
description = "A Python database library with .irodb format and hash-based indexing"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "IroTechLab"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/IroTechLab/irodb"
Repository = "https://github.com/IroTechLab/irodb"
"Bug Tracker" = "https://github.com/IroTechLab/irodb/issues"
Telegram = "https://t.me/ironmanhindigaming"

[project.scripts]
irodb = "irodb.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["irodb*"]